tests/ui/traits/cast-as-dyn-trait-wo-assoc-type-issue-21950.stderr
error[E0191]: the value of the associated type `Output` in `Add` must be specified
  --> $DIR/cast-as-dyn-trait-wo-assoc-type-issue-21950.rs:27:25
   |
LL |     type Output;
   |     ----------- `Output` defined here
...
LL |     let x = &10 as &dyn Add;
   |                         ^^^
   |
help: specify the associated type
   |
LL |     let x = &10 as &dyn Add<Output = /* Type */>;
   |                            +++++++++++++++++++++

error[E0191]: the value of the associated type `Assoc` in `Meow` must be specified
  --> $DIR/cast-as-dyn-trait-wo-assoc-type-issue-21950.rs:32:17
   |
LL |     type Assoc;
   |     ---------- `Assoc` defined here
...
LL |     let _: &dyn Meow<> = &cat;
   |                 ^^^^^^
   |
help: specify the associated type
   |
LL |     let _: &dyn Meow<Assoc = /* Type */> = &cat;
   |                      ++++++++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0191`.
